# junos_push_configuration

./: .gitignore  README.md  config.ini  my_config.set  pyproject.toml
examples/: bgp_config.set  interface_config.set  ospf_config.set  security_config.set
junos_push/: __init__.py  cli.py  core.py  utils.py  validators.py
scripts/: batch_deploy.bat  batch_deploy.sh
